syntax = "proto3";

package NAlice.NScenarios;

option go_package = "a.yandex-team.ru/alice/megamind/protos/scenarios";
option java_package = "ru.yandex.alice.megamind.protos.scenarios";
option java_outer_classname = "CombinatorResponseProto";

import "alice/megamind/protos/analytics/combinators/combinator_analytics_info.proto";
import "alice/megamind/protos/scenarios/response.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TCombinatorResponse {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated string UsedScenarios = 1 [json_name = "used_scenarios", (NYT.column_name) = "used_scenarios"];
    TScenarioRunResponse Response = 2 [json_name = "response", (NYT.column_name) = "response"];
    reserved 3; reserved "CombinatorAnalyticsInfo";
    NCombinators.TCombinatorAnalyticsInfo CombinatorsAnalyticsInfo = 4 [json_name = "combinators_analytics_info", (NYT.column_name) = "combinators_analytics_info"];
}
